--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   auto_size_text: 3.0.0
   cached_network_image: 3.2.1
   carousel_slider: 4.2.1
+  dropdown_button2: 2.0.0
+  emoji_flag_converter: 1.1.0
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
   font_awesome_flutter: 10.1.0
@@ -48,6 +50,7 @@ dependencies:
   shared_preferences_platform_interface: 2.2.0
   shared_preferences_web: 2.1.0
   sqflite: 2.2.6
+  swipeable_card_stack: 0.0.5
   timeago: 3.2.2
   url_launcher: 6.1.10
   url_launcher_android: 6.0.27
