--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   carousel_slider: 4.2.1
   dropdown_button2: 2.0.0
   emoji_flag_converter: 1.1.0
+  expandable: 5.0.1
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
   font_awesome_flutter: 10.1.0
