--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   carousel_slider: 4.2.1
   dropdown_button2: 2.0.0
   emoji_flag_converter: 1.1.0
+  equatable: 2.0.5
   expandable: 5.0.1
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
@@ -39,6 +40,7 @@ dependencies:
   google_fonts: 4.0.3
   intl: 0.18.1
   json_path: 0.6.2
+  mime_type: 1.0.0
   page_transition: 2.0.4
   path_provider: 2.0.14
   path_provider_android: 2.0.25
@@ -63,6 +65,8 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  flutter_lints: 3.0.0
+  lints: 3.0.0
 
   flutter_test:
     sdk: flutter
