--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   auto_size_text: 3.0.0
   cached_network_image: 3.2.1
   carousel_slider: 4.2.1
+  dio:
   dropdown_button2: 2.0.0
   emoji_flag_converter: 1.1.0
   equatable: 2.0.5
