Enable both services in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
-  #  app:
-  #  build: ./flutter
-  #  ports:
-  #    - 80:80
-  #  network_mode: "host"
+  app:
+    build: ./flutter
+    ports:
+      - 80:80
+    network_mode: "host"
   db:
     build: ./python
     ports:
